tests/reference/asr-kwarg_not_found-995f334.stderr
semantic error: Keyword argument not found 'z'
 --> tests/errors/kwarg_not_found.f90:4:23
  |
4 |     call my_func(y=1, z=2)
  |                       ^^^ 'z' keyword argument not found.
